// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`renders error correctly 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "color": "#F25763",
          "fontFamily": "CircularStd-Bold",
        },
        Object {
          "fontSize": 45,
          "textAlign": "center",
        },
        Object {
          "marginTop": "40%",
        },
      ]
    }
  >
    Welcome!
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#F25763",
          "fontFamily": "CircularStd-Bold",
        },
        Object {
          "fontFamily": "CircularStd-Bold",
          "fontSize": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Let's get goin'.
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
        },
        Object {
          "borderColor": "#3b5998",
          "marginTop": "10%",
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "width": "70%",
        },
        Object {
          "borderColor": "#F25763",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "fontFamily": "CircularStd-Bold",
            "fontSize": 17,
            "fontWeight": "bold",
          },
          Object {
            "color": "#F25763",
          },
        ]
      }
    >
      Phone Number Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
        },
        Object {
          "borderColor": "#3b5998",
          "marginTop": "10%",
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "width": "70%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "fontFamily": "CircularStd-Bold",
            "fontSize": 17,
            "fontWeight": "bold",
          },
          Object {
            "color": "#3b5998",
          },
        ]
      }
    >
      Log in with Facebook
    </Text>
  </View>
</View>
`;

exports[`renders home correctly 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "color": "#F25763",
          "fontFamily": "CircularStd-Bold",
        },
        Object {
          "fontSize": 45,
          "textAlign": "center",
        },
        Object {
          "marginTop": "40%",
        },
      ]
=======
exports[`renders correctly 1`] = `
<View>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "#F25763",
        "fontFamily": "CircularStd-Medium",
        "fontSize": 50,
        "fontWeight": "bold",
        "marginTop": "40%",
      }
>>>>>>> f0c39505509fa92b6ed0fd7507999106e9c4618e
    }
  >
    Welcome!
  </Text>
  <Text
    style={
<<<<<<< HEAD
      Array [
        Object {
          "color": "#F25763",
          "fontFamily": "CircularStd-Bold",
        },
        Object {
          "fontFamily": "CircularStd-Bold",
          "fontSize": 20,
          "textAlign": "center",
        },
      ]
    }
  >
    Let's get goin'.
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
        },
        Object {
          "borderColor": "#3b5998",
          "marginTop": "10%",
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "width": "70%",
        },
        Object {
          "borderColor": "#F25763",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "fontFamily": "CircularStd-Bold",
            "fontSize": 17,
            "fontWeight": "bold",
          },
          Object {
            "color": "#F25763",
          },
        ]
      }
    >
      Phone Number Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
        },
        Object {
          "borderColor": "#3b5998",
          "marginTop": "10%",
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "width": "70%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "fontFamily": "CircularStd-Bold",
            "fontSize": 17,
            "fontWeight": "bold",
          },
          Object {
            "color": "#3b5998",
          },
        ]
      }
    >
      Log in with Facebook
    </Text>
  </View>
</View>
`;

exports[`renders username correctly 1`] = `
<View>
  <Text
    style={
      Array [
        Object {
          "color": "#F25763",
          "fontFamily": "CircularStd-Bold",
        },
        Object {
          "fontSize": 45,
          "textAlign": "center",
        },
        Object {
          "marginTop": "40%",
        },
      ]
    }
  >
    Welcome!
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#F25763",
          "fontFamily": "CircularStd-Bold",
        },
        Object {
          "fontFamily": "CircularStd-Bold",
          "fontSize": 20,
          "textAlign": "center",
        },
      ]
=======
      Object {
        "alignSelf": "center",
        "color": "#F25763",
        "fontFamily": "CircularStd-Medium",
        "fontSize": 30,
      }
>>>>>>> f0c39505509fa92b6ed0fd7507999106e9c4618e
    }
  >
    Let's get goin'.
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
<<<<<<< HEAD
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
        },
        Object {
          "borderColor": "#3b5998",
          "marginTop": "10%",
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "width": "70%",
        },
        Object {
          "borderColor": "#F25763",
        },
      ]
=======
      Object {
        "alignSelf": "center",
        "borderColor": "#3b5998",
        "borderRadius": 25,
        "borderWidth": 2.5,
        "marginTop": "10%",
        "paddingHorizontal": 12,
        "paddingVertical": 10,
        "width": "70%",
      }
>>>>>>> f0c39505509fa92b6ed0fd7507999106e9c4618e
    }
  >
    <Text
      style={
<<<<<<< HEAD
        Array [
          Object {
            "alignSelf": "center",
            "fontFamily": "CircularStd-Bold",
            "fontSize": 17,
            "fontWeight": "bold",
          },
          Object {
            "color": "#F25763",
          },
        ]
      }
    >
      Phone Number Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
        },
        Object {
          "borderColor": "#3b5998",
          "marginTop": "10%",
          "paddingHorizontal": 12,
          "paddingVertical": 10,
          "width": "70%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
            "fontFamily": "CircularStd-Bold",
            "fontSize": 17,
            "fontWeight": "bold",
          },
          Object {
            "color": "#3b5998",
          },
        ]
=======
        Object {
          "alignSelf": "center",
          "color": "#3b5998",
          "fontFamily": "CircularStd-Medium",
          "fontSize": 17,
          "fontWeight": "bold",
        }
>>>>>>> f0c39505509fa92b6ed0fd7507999106e9c4618e
      }
    >
      Log in with Facebook
    </Text>
  </View>
</View>
`;
